tests/sksl/errors/ReservedNameFvec3.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'fvec3'
1 error
